# epha-ots

./: .gitignore  CMakeLists.txt  README.md  balloc.h  debouncer.h  debug_stuff.h  flalloc.h  linear_probing.h  log.c  log.h  server.c  storage.c  storage.h  types.h  version.h.in
assets/: client.css  client.html  client.js  client.min.js  client_assembled.html  qrcode.js  qrcode.min.js
tests/: lp_test.c
tools/: assemble_html.py  blob_bench.py  build_and_run_tests.sh  sync_remote.sh
